--- a/customer_service_bot.ipynb
+++ b/customer_service_bot.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -190,15 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def new_customer():\n",
-    "    # Replace `pass` with your code\n",
-    "    pass"
+    "    print(\"\"\"[1] Sign up for service.\n",
+    "          [2] Schedule a home visit.\n",
+    "          [3] Speak to a sales representative.\"\"\")"
    ]
   },
   {
@@ -231,15 +232,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def television_support():\n",
-    "    # Replace `pass` with your code\n",
-    "    pass"
+    "    print(\"\"\"[1] I can't access certain channels.\n",
+    "        [2] My picture is blurry.\n",
+    "        [3] I keep losing service.\n",
+    "They also want a fourth catch-all option\n",
+    "\n",
+    "        [4] Other issues.\"\"\")\n",
+    "    choice=input(\"Choice?\")\n",
+    "    if choice==1:\n",
+    "        print(\"Please check the channel lists at DefinitelyNotSinister.com. If the channel you cannot access is there, please contact a live representative.\")\n",
+    "        did_that_help()\n",
+    "    elif choice==2:\n",
+    "        print(\"Try adjusting the antenna above your television set.\")\n",
+    "        did_that_help()\n",
+    "    elif choice==3:\n",
+    "        print(\"Is it raining outside? If so, wait until it is not raining and then try again.\")\n",
+    "        did_that_help()\n",
+    "    elif choice==4:\n",
+    "        live_rep(\"support\")\n",
+    "    else:\n",
+    "        print(\"Enter a valid option.\")\n",
+    "        television_support()"
    ]
   },
   {
@@ -270,15 +288,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def internet_support():\n",
-    "    # Replace `pass` with your code\n",
-    "    pass"
+    "    print(\"\"\"[1] I can't connect to the internet.\n",
+    "            [2] My connection is very slow.\n",
+    "            [3] I can't access certain sites.\"\"\")\n",
+    "    choice=input(\"Option?\")\n",
+    "    if choice==1:\n",
+    "        print(\"Unplug your router, then plug it back in, then give it a good whack, like the Fonz.\")\n",
+    "        did_that_help()\n",
+    "    elif choice==2:\n",
+    "        print(\"Make sure that all cell phones and other peoples computers are not connected to the internet, so that you can have all the bandwidth.\")\n",
+    "        did_that_help()\n",
+    "    elif choice==3:\n",
+    "        print(\"Move to a different region or install a VPN. Some areas block certain sites.\")\n",
+    "        did_that_help()\n",
+    "    elif choice==4:\n",
+    "        live_rep(\"support\")\n",
+    "    else:\n",
+    "        print(\"Enter a valid option.\")\n",
+    "        television_support()"
    ]
   },
   {
@@ -300,15 +334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def did_that_help():\n",
-    "    # Replace `pass` with your code\n",
-    "    pass"
+    "    response = input(\"Did that help?\")\n",
+    "    if(response==\"yes\"):\n",
+    "        print(\"Thank you!\")\n",
+    "    elif(response==\"no\"):\n",
+    "        print()\n",
+    "        response2 = input(\"Would you rather talk to a live representative or schedule a home visit?\")\n",
+    "        if(response2==\"representative\"):\n",
+    "            live_rep(\"support\")\n",
+    "        elif(response2==\"home\"):\n",
+    "            home_visit(\"support\")\n",
+    "        else:\n",
+    "            print(\"Invalid choice\")\n",
+    "            did_that_help()\n",
+    "    else:\n",
+    "        print(\"Invalid choice\")\n",
+    "        did_that_help()   "
    ]
   },
   {
@@ -338,15 +384,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def sign_up():\n",
-    "    # Replace `pass` with your code\n",
-    "    pass"
+    "    print(\"\"\"Great choice, friend! We're excited to have you join the DNS family! Please select the package you are interested in signing up for.\n",
+    "            [1] Bundle Deal (Internet + Cable)\n",
+    "            [2] Internet\n",
+    "            [3] Cable\"\"\")\n",
+    "    response=input(\"Package?\")\n",
+    "    if(response==1):\n",
+    "        print(\"You've selected the Bundle Package! Please schedule a home visit and our technician will come and set up your new service.\")\n",
+    "        home_visit(\"new install\")\n",
+    "    elif(response==2):\n",
+    "        print(\"You've selected the Internet Only Package! Please schedule a home visit and our technician will come and set up your new service.\")\n",
+    "        home_visit(\"new install\")\n",
+    "    elif(response==3):\n",
+    "        print(\"You've selected the Cable Only Package! Please schedule a home visit and our technician will come and set up your new service.\")\n",
+    "        home_visit(\"new install\")\n",
+    "    else:\n",
+    "        print(\"Choose valid option\")\n",
+    "        sign_up()\n",
+    "        "
    ]
   },
   {
