--- a/customer_service_bot.ipynb
+++ b/customer_service_bot.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +98,15 @@
     "def cs_service_bot():\n",
     "    print(\"\"\"Hello! Welcome to the DNS Cable Company's Service Portal. Are you a new or existing customer?\n",
     "     [1] New Customer\n",
-    "     [2] Existing Customer\"\"\")"
+    "     [2] Existing Customer\"\"\")\n",
+    "    response=input(\"Please enter the number corresponding to your choice: \")\n",
+    "    if(response==\"1\"):\n",
+    "        new_customer()\n",
+    "    elif(response==\"2\"):\n",
+    "        existing_customer()\n",
+    "    else:\n",
+    "        print(\"Sorry, we didn't understand your selection.\")\n",
+    "        cs_service_bot()"
    ]
   },
   {
@@ -110,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +127,12 @@
      "text": [
       "Hello! Welcome to the DNS Cable Company's Service Portal. Are you a new or existing customer?\n",
       "     [1] New Customer\n",
-      "     [2] Existing Customer\n"
+      "     [2] Existing Customer\n",
+      "Please enter the number corresponding to your choice: 1\n",
+      "1\n",
+      "[1] Sign up for service.\n",
+      "          [2] Schedule a home visit.\n",
+      "          [3] Speak to a sales representative.\n"
      ]
     }
    ],
@@ -232,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,8 +253,6 @@
     "    print(\"\"\"[1] I can't access certain channels.\n",
     "        [2] My picture is blurry.\n",
     "        [3] I keep losing service.\n",
-    "They also want a fourth catch-all option\n",
-    "\n",
     "        [4] Other issues.\"\"\")\n",
     "    choice=input(\"Choice?\")\n",
     "    if choice==1:\n",
@@ -444,15 +455,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def home_visit():\n",
-    "    # Replace `pass` with your code\n",
-    "    pass"
+    "    choice=input(\"Purpose?\")\n",
+    "    if(purpose==\"none\"):\n",
+    "        print(\"\"\"[1] New service installation.\n",
+    "         [2] Exisitng service repair.\n",
+    "         [3] Location scouting for unserviced region.\"\"\")\n",
+    "        choice2=input(\"Purpose?\")\n",
+    "        if(choice2==1):\n",
+    "            home_visit(\"new install\")\n",
+    "        elif(choice2==2):\n",
+    "            home_visit(\"support\")\n",
+    "        elif(choice==3):\n",
+    "            home_visit(\"scout\")\n",
+    "    else:\n",
+    "        visit_date=input(\"Please enter a date below when you are available for a technician to come to your home and \"+choice+\".\")\n",
+    "        print(\"Wonderful! A technical will come visit you on \"+visit_date+\". Please be available between the hours of 1:00 am and 11:00 pm.\")\n",
+    "        return visit_date"
    ]
   },
   {
@@ -472,15 +495,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def live_rep(purpose):\n",
-    "    # Replace `pass` with your code\n",
-    "    pass"
+    "    if(purpose==\"sales\"):\n",
+    "        print(\"\"\"Please hold while we connect you with a live sales representative. The wait time will be between two minutes and six hours. We thank you for your patience.\"\"\")\n",
+    "    if(purpose==\"support\"):\n",
+    "        print(\"\"\"Please hold while we connect you with a live support representative. The wait time will be between two minutes and six hours. We thank you for your patience.\"\"\")"
    ]
   },
   {
@@ -494,11 +519,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Welcome to the DNS Cable Company's Service Portal. Are you a new or existing customer?\n",
+      "     [1] New Customer\n",
+      "     [2] Existing Customer\n"
+     ]
+    }
+   ],
    "source": [
     "cs_service_bot()"
    ]
